WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312627
AX: Fix base-select VoiceOver support: close popover on selection, fix accessibility path positioning when CSS transforms are present
https://bugs.webkit.org/show_bug.cgi?id=312627
Summary
AX: Fix base-select VoiceOver support: close popover on selection, fix access...
Tyler Wilcock
Reported
2026-04-17 21:10:52 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-17 21:10:58 PDT
<
rdar://problem/175058883
>
Tyler Wilcock
Comment 2
2026-04-17 21:13:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63025
EWS
Comment 3
2026-04-20 08:00:40 PDT
Committed
311587@main
(ef14489fb3cc): <
https://commits.webkit.org/311587@main
> Reviewed commits have been landed. Closing PR #63025 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug