AX: Fix base-select VoiceOver support: close popover on selection, fix accessibility path positioning when CSS transforms are present https://bugs.webkit.org/show_bug.cgi?id=312627 rdar://175058883

Reviewed by Joshua Hoffman.

This commit fixes three accessibility bugs with appearance:base-select:

1. VoiceOver selection didn't close the popover. The mouse/keyboard paths
 both call hidePickerPopoverElement() after selecting an option, but the
 two accessibility paths (press via accessKeyAction, and setSelected) did
 not. Fixed by calling optionSelectedByUser() + hidePickerPopoverElement()
 in both paths for base-select.

2. AccessibilityListBoxOption inherited from AccessibilityNodeObject, whose
 renderer() always returns nullptr. This broke supportsPath(),
 elementPath(), and boundingBoxRect() for base-select options that have
 real renderers. Changed to inherit from AccessibilityRenderObject, which
 gracefully handles both cases (renderer present for base-select, absent
 for traditional listbox).

3. elementPath() positioned border-radius and clip-path accessibility paths
 using localToAbsolute() without MapCoordinatesMode::UseTransforms. For
 elements positioned purely via CSS transforms (e.g. a circular menu
 layout), all paths were placed at the same untransformed origin. This
 caused iOS VoiceOver's cursor to stay stuck at one position while
 navigating between menu items. Fixed by passing UseTransforms.

Also adds pathAsBounds to the test infrastructure. Existing utility function pathDescription
intentionally omits coordinates to avoid brittle tests, but that means it
can't verify path positioning. pathAsBounds returns the bounding rect of
the path, which is what we need to assert that CSS transforms are reflected
in the path origin.

* LayoutTests/accessibility/base-select-option-border-radius-path-expected.txt: Added.
* LayoutTests/accessibility/base-select-option-border-radius-path.html: Added.
* LayoutTests/accessibility/base-select-option-press-closes-popover-expected.txt: Added.
* LayoutTests/accessibility/base-select-option-press-closes-popover.html: Added.
* LayoutTests/accessibility/element-path-with-css-transforms-expected.txt: Added.
* LayoutTests/accessibility/element-path-with-css-transforms.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/resources/accessibility-helper.js:
* Source/WebCore/accessibility/AccessibilityListBoxOption.cpp:
(WebCore::AccessibilityListBoxOption::AccessibilityListBoxOption):
(WebCore::AccessibilityListBoxOption::create):
(WebCore::AccessibilityListBoxOption::elementRect const):
(WebCore::AccessibilityListBoxOption::setSelected):
* Source/WebCore/accessibility/AccessibilityListBoxOption.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::computePathForRenderBox):
(WebCore::AccessibilityRenderObject::elementPath const):
* Source/WebCore/html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::accessKeyAction):
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
(WTR::AccessibilityUIElement::pathAsBounds const):
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* Tools/WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* Tools/WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
(WTR::AccessibilityUIElementAtspi::pathAsBounds const):
* Tools/WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.h:
* Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.h:
* Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElementIOS::pathAsBounds const):
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.h:
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElementMac::pathAsBounds const):
* Tools/WebKitTestRunner/InjectedBundle/playstation/AccessibilityUIElementPlayStation.cpp:
(WTR::AccessibilityUIElementPlayStation::pathAsBounds const):
* Tools/WebKitTestRunner/InjectedBundle/playstation/AccessibilityUIElementPlayStation.h:
* Tools/WebKitTestRunner/InjectedBundle/win/AccessibilityUIElementWin.cpp:
(WTR::AccessibilityUIElementWin::pathAsBounds const):
* Tools/WebKitTestRunner/InjectedBundle/win/AccessibilityUIElementWin.h:

Canonical link: https://commits.webkit.org/311587@main